--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.553.0",
     "next": "16.0.3",
+    "openai": "^6.8.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
